rds.tf
resource "aws_db_subnet_group" "main" {
  name       = "main"
  subnet_ids = [aws_subnet.private_db.id, aws_subnet.private_app.id]

  }

resource "aws_db_instance" "mysql" {
  identifier        = "mysql-db"
  engine            = "mysql"
  instance_class    = "db.t3.micro"
  allocated_storage = 20
  username          = "admin"
  password          = "password"
  db_subnet_group_name = aws_db_subnet_group.main.name
  vpc_security_group_ids = [aws_security_group.db_sg.id]
   
   skip_final_snapshot       = false
    final_snapshot_identifier = "final-snapshot-identifier"
  }
